--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -188,29 +188,29 @@
             </b>
         </p>
         <p>
-            We rendered "" using 4 different focal distance, while using 256 samples per pixel, 4 samples per light, max ray depth of 12,
-            and lens radius of 0.05.
+            We rendered "CBbunny_microfacet_cu.dae" using 4 different focal distance, while using 256 samples per pixel, 4 samples per light, max ray depth of 12,
+            and lens radius of 0.05. We can see that the front ear is more clear to see when focal distance is at 4.5 while the back ear is more clear to see when focal distance is at 5.
         </p>
         <div align="middle">
             <table style="width:100%">
                 <tr align="center">
                     <td>
-                        <img src="img/CBdragon_a0005.png" align="middle" width="400px" />
-                        <figcaption>Render with 0.005 Roughness Dragon Statue(CBdragon_microfacet_au.dae)</figcaption>
+                        <img src="img/bunny_d_4.png" align="middle" width="400px" />
+                        <figcaption>Render with focal distance of 4 (CBbunny_microfacet_cu.dae)</figcaption>
                     </td>
                     <td>
-                        <img src="img/CBdragon_a005.png" align="middle" width="400px" />
-                        <figcaption>Render with 0.05 Roughness Dragon Statue(CBdragon_microfacet_au.dae)</figcaption>
+                        <img src="img/bunny_d_4_5.png" align="middle" width="400px" />
+                        <figcaption>Render with focal distance of 4.5 (CBbunny_microfacet_cu.dae)</figcaption>
                     </td>
                 </tr>
                 <tr align="center">
                     <td>
-                        <img src="img/CBdragon_a025.png" align="middle" width="400px" />
-                        <figcaption>Render with 0.25 Roughness Dragon Statue(CBdragon_microfacet_au.dae)</figcaption>
+                        <img src="img/bunny_d_5.png" align="middle" width="400px" />
+                        <figcaption>Render with focal distance of 5 (CBbunny_microfacet_cu.dae)</figcaption>
                     </td>
                     <td>
-                        <img src="img/CBdragon_a05.png" align="middle" width="400px" />
-                        <figcaption>Render with 0.5 Roughness Dragon Statue(CBdragon_microfacet_au.dae)</figcaption>
+                        <img src="img/bunny_d_5_5.png" align="middle" width="400px" />
+                        <figcaption>Render with focal distance of 5.5 (CBbunny_microfacet_cu.dae)</figcaption>
                     </td>
                 </tr>
             </table>
@@ -222,29 +222,29 @@
             </b>
         </p>
         <p>
-            We rendered "" using 4 different focal distance, while using 256 samples per pixel, 4 samples per light, max ray depth of 12,
-            and focal lens of 4.5.
+            We rendered "CBbunny_microfacet_cu.dae" using 4 different lens radius, while using 256 samples per pixel, 4 samples per light, max ray depth of 12,
+            and focal distance of 4.5. We can see as lens radius goes up, locations other than center of the image becomes harder to see clearly.
         </p>
         <div align="middle">
             <table style="width:100%">
                 <tr align="center">
                     <td>
-                        <img src="img/CBdragon_a0005.png" align="middle" width="400px" />
-                        <figcaption>Render with 0.005 Roughness Dragon Statue(CBdragon_microfacet_au.dae)</figcaption>
+                        <img src="img/bunny_b_005.png" align="middle" width="400px" />
+                        <figcaption>Render with lens radius of 0.05 (CBbunny_microfacet_cu.dae)</figcaption>
                     </td>
                     <td>
-                        <img src="img/CBdragon_a005.png" align="middle" width="400px" />
-                        <figcaption>Render with 0.05 Roughness Dragon Statue(CBdragon_microfacet_au.dae)</figcaption>
+                        <img src="img/bunny_b_010.png" align="middle" width="400px" />
+                        <figcaption>Render with lens radius of 0.1 (CBbunny_microfacet_cu.dae)</figcaption>
                     </td>
                 </tr>
                 <tr align="center">
                     <td>
-                        <img src="img/CBdragon_a025.png" align="middle" width="400px" />
-                        <figcaption>Render with 0.25 Roughness Dragon Statue(CBdragon_microfacet_au.dae)</figcaption>
+                        <img src="img/bunny_b_020.png" align="middle" width="400px" />
+                        <figcaption>Render with lens radius of 0.2 (CBbunny_microfacet_cu.dae)</figcaption>
                     </td>
                     <td>
-                        <img src="img/CBdragon_a05.png" align="middle" width="400px" />
-                        <figcaption>Render with 0.5 Roughness Dragon Statue(CBdragon_microfacet_au.dae)</figcaption>
+                        <img src="img/bunny_b_030.png" align="middle" width="400px" />
+                        <figcaption>Render with lens radius of 0.3 (CBbunny_microfacet_cu.dae)</figcaption>
                     </td>
                 </tr>
             </table>
