--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -189,28 +189,28 @@
         </p>
         <p>
             We rendered "CBbunny_microfacet_cu.dae" using 4 different focal distance, while using 256 samples per pixel, 4 samples per light, max ray depth of 12,
-            and lens radius of 0.05. We can see that the front ear is more clear to see when focal distance is at 4.5 while the back ear is more clear to see when focal distance is at 5.
+            and lens radius of 0.05 . We can gradually see clearly the head, ears, and body of the bunny as we increase the focal distance.
         </p>
         <div align="middle">
             <table style="width:100%">
                 <tr align="center">
                     <td>
-                        <img src="img/bunny_d_4.png" align="middle" width="400px" />
-                        <figcaption>Render with focal distance of 4 (CBbunny_microfacet_cu.dae)</figcaption>
+                        <img src="img/bunny_d_1_2.png" align="middle" width="400px" />
+                        <figcaption>Render with focal distance of 1.2 (CBbunny_microfacet_cu.dae)</figcaption>
                     </td>
                     <td>
-                        <img src="img/bunny_d_4_5.png" align="middle" width="400px" />
-                        <figcaption>Render with focal distance of 4.5 (CBbunny_microfacet_cu.dae)</figcaption>
+                        <img src="img/bunny_d_1_4.png" align="middle" width="400px" />
+                        <figcaption>Render with focal distance of 1.4 (CBbunny_microfacet_cu.dae)</figcaption>
                     </td>
                 </tr>
                 <tr align="center">
                     <td>
-                        <img src="img/bunny_d_5.png" align="middle" width="400px" />
-                        <figcaption>Render with focal distance of 5 (CBbunny_microfacet_cu.dae)</figcaption>
+                        <img src="img/bunny_d_1_6.png" align="middle" width="400px" />
+                        <figcaption>Render with focal distance of 1.6 (CBbunny_microfacet_cu.dae)</figcaption>
                     </td>
                     <td>
-                        <img src="img/bunny_d_5_5.png" align="middle" width="400px" />
-                        <figcaption>Render with focal distance of 5.5 (CBbunny_microfacet_cu.dae)</figcaption>
+                        <img src="img/bunny_d_1_8.png" align="middle" width="400px" />
+                        <figcaption>Render with focal distance of 1.8 (CBbunny_microfacet_cu.dae)</figcaption>
                     </td>
                 </tr>
             </table>
@@ -223,7 +223,7 @@
         </p>
         <p>
             We rendered "CBbunny_microfacet_cu.dae" using 4 different lens radius, while using 256 samples per pixel, 4 samples per light, max ray depth of 12,
-            and focal distance of 4.5. We can see as lens radius goes up, locations other than center of the image becomes harder to see clearly.
+            and focal distance of 1.4 . We can see as lens radius goes up, locations other than center of the image becomes harder to see clearly.
         </p>
         <div align="middle">
             <table style="width:100%">
