--- a/proj4/index.html
+++ b/proj4/index.html
@@ -42,7 +42,10 @@
 	<h2 align="middle">Overview</h2>
 
 	<p>
-      Overview here
+      In this project, we build a Cloth Simulator. We went from constructing the mass and spring system to simulating the point mass positions using numerical integration, 
+      and from shpere/plane collision to self collision. Finally, we implemented various shading and mapping effects using GLSL. These techniques helped us render the cloth 
+      with many realistic effects.
+
   </p>
   <br />
 
